--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "2.4.3",
     "bulma": "^0.8.2",
+    "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "eslint": "^4.19.1",
     "express": "^4.17.1",
